# Q100_manuscript_software

./: README.md
analyses/Alignment/: AlignmentNotes.txt
analyses/Annotation/: GeneAnnotationSoftware.txt
analyses/Assembly/: remove_nodes_add_telomere.py
analyses/CorrectionCounts/: CorrectionCountCommands.txt
analyses/GQCBenchmarking/FastK_GM_021425/: FastK  Fastcat  Fastcp  Fastmerge  Fastmv  Fastrm  Haplex  Histex  Homex  KmerMap  Logex  Profex  Symmex  Tabex  Vennex
analyses/GQCBenchmarking/GQC/: MANIFEST.in  README.md  pyproject.toml
analyses/GQCBenchmarking/GQC/GQC/: AssemblySummaryPlots.R  DiscrepancyCountPlot.R  IndelLengthPlot.R  MononucAccuracy.R  NGAxPlot.R  PlotAssemblyContigAligns.R  PlotChromAligns.R  __main__.py  align.py  alignparse.py  bamdiscrepancies.py  bedtoolslib.py  bench.py  benchconfig.txt  compare.py  constructgenome.py  coverage.py  errors.py  examinesynteny.py  getextremekmers.py  gethets.py  kmers.py  mummermethods.py  output.py  phasing.py  plots.py  readbench.py  seqparse.py  stats.py  structvar.py  test  variants.py
analyses/GQCBenchmarking/GQC/GQC.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
analyses/GQCBenchmarking/GQC/tests/: test_calls.py
analyses/Patching/: create_patch_vcf.py  retrieve_patchseqs_from_bams.py
analyses/Round2Polishing/: SmallCorrectionsElementOnsoIlluminaHiFi.txt  TelomereIncorporationCommands.txt
analyses/Round2Polishing/rDNAextension/: improve_gaps_ont.py
analyses/Round3Polishing/: OnsoElementPolishingStrategy.txt
analyses/VariantGenomeBenchmarkComparison/: project_blocks_multi_thread.py
(+57 files in other folders)
